--- a/src/app/table-basic-example.html
+++ b/src/app/table-basic-example.html
@@ -1,22 +1,140 @@
-<div fxLayout="colum">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Actions Buttons</mat-card-title>
-      <mat-card-subtitle>Start</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Actions Buttons</mat-card-title>
-      <mat-card-subtitle>Start</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+<div fxLayout="column" fxFlex="100" fxLayoutGap="20px" *ngIf="!isNewCashFlow">
+  <div fxFlex="10">
+    <h1>Good Afternoon 🤚</h1>
+    <h3>April 02, 2021</h3>
+  </div>
+  <div fxLayout="colum" fxLayoutGap="20px" fxFlex="35">
+    <mat-card fxFlex="80">
+      <mat-card-header>
+        <mat-card-title>Congratulations you are ready to start</mat-card-title>
+        <mat-card-subtitle>Some COntent gpes likes this, blah blah blah. $80.0 M</mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+    <mat-card fxFlex="20" style="padding: 10px">
+      <mat-card-header>
+        <mat-card-title>Actions Buttons</mat-card-title>
+        <mat-card-subtitle>Start</mat-card-subtitle>
+      </mat-card-header>
+      <div fxFlex="100" fxLayoutAlign="center center">
+      <button mat-flat-button style="height: 60%;width: 100%" (click)="newCash()" color="primary">New Cash Kick</button>
+      </div>
+    </mat-card>
+  </div>
+  <div fxFlexFill fxFlex="60">
+    <mat-card style="padding: 30px" >
+      <mat-card-header>
+        <mat-card-title>Your Payments</mat-card-title>
+      </mat-card-header>
+      <table  mat-table [dataSource]="dataSource">
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+  </div>
+</div>
+<div *ngIf="isNewCashFlow" fxFlex fxLayout="column" fxLayoutGap="20px" >
+  <div>
+  <h1>New Cash Kick</h1>
+  <h3>Let's setup a new cash kick to power your Saas</h3>
+    <button mat-raised-button color="primary"(click)="newCash()">
+      <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="arrow_back"></mat-icon>
+      Back
+    </button>
+  </div>
+  <div fxLayout="colum" fxLayoutGap="20px" fxFlex="100" fxFlexFill>
+    <mat-card fxFlex="80" style="padding: 20px">
+      <mat-card-header>
+        <mat-card-title>Your Contracts</mat-card-title>
+      </mat-card-header>
+      <table mat-table [dataSource]="dataSourceCashFlow">
+
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()"
+                          [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsCashFlow"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsCashFlow;"
+            (click)="selection.toggle(row)">
+        </tr>
+      </table>
+
+    </mat-card>
+    <mat-card fxFlex="20" style="padding: 30px">
+      <mat-card-header>
+        <mat-card-title>Summary</mat-card-title>
+      </mat-card-header>
+      <div fxFlex="60">
+
+      </div>
+      <div fxFlex="30" fxLayoutAlign="center flex-end">
+        <button mat-flat-button style="height: 30%;width: 100%"  color="primary">New Cash Kick</button>
+      </div>
+    </mat-card>
+  </div>
 </div>
